--- a/templates/frontend/onboard-vendor.html
+++ b/templates/frontend/onboard-vendor.html
@@ -101,7 +101,7 @@
 
 <!-- Vendor Registration Form Start -->
 
-{% if not user.user_type == "Vendor" %}
+{% if not user.is_authenticated or user.user_type == "Customer" or user.vendor_profile.status == "Rejected" %}
 <section class="vendor-register section-b-space" id="vendor-register">
     <div class="container-fluid-lg">
         <div class="seller-title mb-4">
@@ -260,7 +260,7 @@
 <section class="vendor-register section-b-space">
     <div class="container-fluid-lg">
         <div class="seller-title mb-4">
-            {% if user.vendor_profile == "Approved" %}
+            {% if user.vendor_profile.status == "Approved" %}
             <h2>You are already registered as a Vendor</h2>
             <p>Go to your <a href="{% url 'vendor-dashboard-home' %}">Vendor Dashboard</a></p>
 
