--- a/templates/emails/partials/base.html
+++ b/templates/emails/partials/base.html
@@ -60,7 +60,7 @@
         }
 
         .password-button {
-            background-color: #0DA487;
+            background-color: #EE6A3E;
             border: none;
             color: #fff;
             padding: 14px 26px;
@@ -104,7 +104,7 @@
         }
 
         .theme-color {
-            color: #0DA487;
+            color: #EE6A3E;
         }
     </style>
 </head>
