--- a/templates/emails/forgot-password.html
+++ b/templates/emails/forgot-password.html
@@ -1,12 +1,12 @@
 {% extends './partials/base.html' %}
-
+{% load static %}
 {% block content %}
 <table class="content-table" style="margin-top: 40px;" align="center" border="0" cellpadding="0"
     cellspacing="0" width="100%">
     <thead>
         <tr>
             <td align="center">
-                <img src="images/otp.png" alt="OTP Email" style="width: 100px; height: auto;">
+                <img src="{% static 'frontend/assets/images/reset.png' %}" alt="OTP Email" style="width: 100px; height: auto;">
             </td>
         </tr>
     </thead>
