--- a/templates/emails/forgot-password.html
+++ b/templates/emails/forgot-password.html
@@ -1,6 +1,7 @@
 {% extends './partials/base.html' %}
 {% load static %}
 {% block content %}
+
 <table class="content-table" style="margin-top: 40px;" align="center" border="0" cellpadding="0"
     cellspacing="0" width="100%">
     <thead>
@@ -22,7 +23,7 @@
 
             <td style="display: block;">
                 <h3 style="font-weight: 700; font-size: 20px; margin: 0;color: #939393;margin-top: 15px;">
-                    Hi {{ user_name|default:"User" }},
+                    Hi {{ first_name|default:"User" }},
                 </h3>
             </td>
 
