--- a/templates/emails/vendor-application-processing.html
+++ b/templates/emails/vendor-application-processing.html
@@ -61,7 +61,7 @@
                 <p
                     style="font-size: 17px; font-weight: 600; width: 74%; margin: 8px auto 0; line-height: 1.5; color: #939393;">
                     You will receive another email once your application has been reviewed and approved. This
-                    typically takes between <strong>24 to 48 hours</strong>.
+                    typically takes between <strong>24 and 48 hours</strong>.
                 </p>
             </td>
         </tr>
