--- a/templates/frontend/verify-otp.html
+++ b/templates/frontend/verify-otp.html
@@ -45,6 +45,7 @@
                                     </div>
                                     <input type="hidden" name="otp" id="otpInput">
                                     <input type="hidden" name="email" value="{{email}}">
+                                    <input type="hidden" name="otp_type" value="{{otp_type}}">
                                 </div>
 
                                 <!-- Submit -->
