--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -419,7 +419,7 @@
                             <img src="{% static 'frontend/assets/images/banners/kitchen_utensils.jpg' %}" class="bg-img blur-up lazyload" alt="">
                             <div class="banner-details p-center p-4 text-white text-center">
                                 <div>
-                                    <h3 class="lh-base fw-bold offer-text">Get 3 Cashback! Min Order of $30</h3>
+                                    <h3 class="lh-base fw-bold offer-text">Get Cashback! Min Order of ₦1,000,000</h3>
                                     <h6 class="coupon-code">Use Code : GROCERY1920</h6>
                                 </div>
                             </div>
