--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -379,12 +379,12 @@
                             </div>
                         </div>
 
-                        <div class="header-nav-right">
-                            <button class="btn deal-button" data-bs-toggle="modal" data-bs-target="#deal-box">
-                                <i data-feather="zap"></i>
-                                <span>Deal Today</span>
-                            </button>
-                        </div>
+<!--                        <div class="header-nav-right">-->
+<!--                            <button class="btn deal-button" data-bs-toggle="modal" data-bs-target="#deal-box">-->
+<!--                                <i data-feather="zap"></i>-->
+<!--                                <span>Deal Today</span>-->
+<!--                            </button>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -502,6 +502,7 @@
 
 
     <script src="{% static 'frontend/assets/js/paystack.js' %}"></script>
+    <script src="{% static 'frontend/assets/js/states_lga.js' %}"></script>
 
     <script>
         const csrfToken = '{{ csrf_token }}';
